@@ -795,74 +795,12 @@ public class MovePanel extends ActionPanel
     @SuppressWarnings("unchecked")
     private Route getRouteNonForced(Territory start, Territory end)
     {
-        Route defaultRoute = getData().getMap().getRoute(start, end);
-        if (defaultRoute == null)
-            throw new IllegalStateException("No route between:" + start +
-                                            " and " + end);
-
-        //if the start and end are in water, try and get a water route
-        //dont force a water route, since planes may be moving
-        if (start.isWater() && end.isWater())
-        {
-            Route waterRoute = getData().getMap().getRoute(start, end,
-                Matches.TerritoryIsWater);
-            if (waterRoute != null &&
-                waterRoute.getLength() == defaultRoute.getLength())
-                return waterRoute;
-        }
-
-        //ignore the end territory in our tests
-        //it must be in the route, so it shouldn't affect the route choice
-        Match<Territory> territoryIsEnd = Matches.territoryIs(end);
-
         // can't rely on current player being the unit owner in Edit Mode
         // look at the units being moved to determine allies and enemies
         PlayerID owner = getUnitOwner(m_selectedUnits);
 
-        // No aa guns on route predicate
-        Match<Territory> noAA = new InverseMatch<Territory>(Matches.territoryHasEnemyAA(owner, getData()));
-            
-
-        // No neutral countries on route predicate
-        Match<Territory> noNeutral = new InverseMatch<Territory>(new CompositeMatchAnd<Territory>(Matches.TerritoryIsNeutral));
-
-        //no enemy units on the route predicate
-        Match<Territory> noEnemy = new InverseMatch<Territory>(Matches.territoryHasEnemyUnits(owner, getData()));
-        
-        
-        //these are the conditions we would like the route to satisfy, starting
-        //with the most important
-        List<Match<Territory>> tests = new ArrayList( Arrays.asList(
-                //best if no enemy and no neutral
-                new CompositeMatchOr<Territory>(noEnemy, noNeutral),
-                //we will be satisfied if no aa and no neutral
-                new CompositeMatchOr<Territory>(noAA, noNeutral),
-                //single matches
-                noEnemy, noAA, noNeutral));
-        
-        
-        //remove matches that already pass
-        //ignore the end
-        for(Iterator<Match<Territory>> iter = tests.iterator(); iter.hasNext(); ) {
-            Match<Territory> current = iter.next();
-            if(defaultRoute.allMatch(new CompositeMatchOr(current, territoryIsEnd))) {
-                iter.remove();
-            }
-        }
-        
-        
-        for(Match<Territory> t : tests) {            
-            Route testRoute = getData().getMap().getRoute(start, end, new CompositeMatchOr<Territory>(t, territoryIsEnd));
-            
-            if(testRoute != null && testRoute.getLength() == defaultRoute.getLength())
-                return testRoute;
-        }
-            
-        
-        
-        return defaultRoute;
+        return MoveValidator.getBestRoute(start, end, getData(), owner);
     }
-    
     
     private void updateUnitsThatCanMoveOnRoute(Collection<Unit> units, final Route route)
     {
